[package]
name = "overlad"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
axum = { version = "0.8.4", features = ["multipart"] }
axum_typed_multipart = "0.16.3"
clap = { version = "4.5.45", features = ["derive"] }
current-previous = "0.1.3"
image = "0.25.6"
imageproc = "0.25.0"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
