[package]
name = "overlad-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum_typed_multipart = "0.16.3"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
current-previous = "0.1.3"
dotenvy = "0.15.7"
hmac = "0.12.1"
image = "0.25.6"
imageproc = "0.25.0"
jwt = "0.16.0"
overlad-api = { path = "../overlad-api" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
